# csound-nwjs

./: .gitignore  CMakeLists.txt  README.md  binding.gyp  jscsound.cpp  rebuild.bash  rebuild.ps1
.github/workflows/: build-and-release.yml  ci.yml
cmake/: FetchCsoundACHeader.cmake  FindCsoundHomeFirst.cmake
